# OtusHomework

./: .gitignore  CMakeLists.txt  allocator.h  index.md  ip_address.cpp  ip_address.h  main.cpp
.github/workflows/: Print_workflow.yml  Test_artifacts.yml  Test_env.yml  docGenerator.yml  release.yml
